syntax = "proto3";
package nolus.mint.v1beta1;

import "gogoproto/gogo.proto";

option go_package = "github.com/Nolus-Protocol/nolus-core/x/mint/types";

// Minter represents the minting state.
message Minter {
  string norm_time_passed = 2 [
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false
  ];

  string total_minted = 3 [
    (gogoproto.customtype) = "cosmossdk.io/math.Uint",
    (gogoproto.nullable) = false
  ];

  string prev_block_timestamp = 4 [
    (gogoproto.customtype) = "cosmossdk.io/math.Uint",
    (gogoproto.nullable) = false
  ];

  string annual_inflation = 5 [
    (gogoproto.customtype) = "cosmossdk.io/math.Uint",
    (gogoproto.nullable) = false
  ];
}

// Params holds parameters for the mint module.
message Params {
  // type of coin to mint
  string mint_denom = 1;

  string max_mintable_nanoseconds = 2 [
    (gogoproto.customtype) = "cosmossdk.io/math.Uint",
    (gogoproto.nullable) = false
  ];
}
