syntax = "proto3";
package nolus.mint.v1beta1;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "nolus/mint/v1beta1/mint.proto";

option go_package = "github.com/Nolus-Protocol/nolus-core/x/mint/types";

// Query provides defines the gRPC querier service.
service Query {
  // Params returns the total set of minting parameters.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/nolus/mint/v1beta1/params";
  }

  // MintState returns the current minting state value.
  rpc MintState(QueryMintStateRequest) returns (QueryMintStateResponse) {
    option (google.api.http).get = "/nolus/mint/v1beta1/state";
  }

  // AnnualInflation returns the current minting inflation rate for the next 12 months.
  rpc AnnualInflation(QueryAnnualInflationRequest) returns (QueryAnnualInflationResponse) {
    option (google.api.http).get = "/nolus/mint/v1beta1/annual_inflation";
  }  
}

// QueryParamsRequest is the request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is the response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params defines the parameters of the module.
  Params params = 1 [(gogoproto.nullable) = false];
}

// QueryMintStateRequest is the request type for the Query/State RPC method.
message QueryMintStateRequest {}

// QueryMintStateResponse is the response type for the Query/State RPC
// method.
message QueryMintStateResponse {
  bytes norm_time_passed = 1 [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec", (gogoproto.nullable) = false];
  bytes total_minted = 2 [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Uint", (gogoproto.nullable) = false];
}

// QueryAnnualInflationRequest is the request type for the Query/AnnualInflation RPC method.
message QueryAnnualInflationRequest {}

// QueryAnnualInflationResponse is the response type for the Query/AnnualInflation RPC
// method.
message QueryAnnualInflationResponse {
  // inflation is the current minting inflation value.
  bytes annual_inflation = 1 [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Uint", (gogoproto.nullable) = false];
}
